Switched "new Long" for "Long.valueOf" - marginally more efficient.